User update method
